--- a/Day 33/Where are the rest of the days/task-info.yaml
+++ b/Day 33/Where are the rest of the days/task-info.yaml
@@ -3,11 +3,8 @@ files:
   - name: main.py
     visible: true
     learner_created: false
-  - name: solution.py
-    visible: true
-    learner_created: false
-  - name: art.py
-    visible: true
+  - name: __init__.py
+    visible: false
     learner_created: false
 status: Solved
 record: -1
